# rust-mcp-servers

./: .gitignore  Cargo.toml  README.md  justfile  lefthook.yml
.beads/: metadata.json
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/tracks/core_openscad_mvp_20260315/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/mcp-protocol_20260315/: index.md  metadata.json  plan.md  spec.md
mcp-openscad/: .mcpbignore  Cargo.toml  README.md  justfile  manifest.json  openscad-mcp  openscad-mcp.mcpb  run.sh
mcp-openscad/src/: lib.rs  logging.rs  main.rs  mcp.rs  metrics.rs  server.rs
mcp-openscad/src/analysis/: mesh.rs  validator.rs
mcp-openscad/src/cache/: file_cache.rs
mcp-openscad/src/config/: loader.rs
mcp-openscad/src/models/: dependency.rs  mod.rs  store.rs
mcp-openscad/src/render/: engine.rs
mcp-openscad/src/tools/: mod.rs
shared/: Cargo.toml  justfile
shared/src/: lib.rs
src/: analysis.rs  cache.rs  cli.rs  error.rs  lib.rs  models.rs
src/analysis/: mesh.rs  mod.rs
src/cache/: file_cache.rs  metrics.rs  mod.rs
src/config/: loader.rs  mod.rs
src/models/: dependency.rs
src/render/: engine.rs  mod.rs  params.rs  quality.rs
src/tools/: mod.rs
