[package]
name = "openscad-mcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28", features = ["full"] }
tempfile = "3.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
dotenv = "0.15"

[lib]
name = "openscad_mcp"
path = "src/lib.rs"

[[bin]]
name = "openscad-mcp"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
