[package]
name = "openscad-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
which = "6"
sha2 = "0.10"
regex = "1"
shared = { path = "../shared" }

[lib]
name = "openscad_mcp"
path = "src/lib.rs"

[[bin]]
name = "openscad-mcp"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.14"
